- download via api possible - work on the client api, better handling in the case that the token is not valid
